kubernetes/deployment_web1.yml
# create a deployment that will be used by the ingress
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tp3-web1
  labels:
    app: tp3-web1

spec:
  selector:
    matchLabels:
      app: tp3-web1
  template:
    metadata:
      labels:
        app: tp3-web1
    spec:
      containers:
      - name: tp3-web1
        image: tp3-web1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
