kubernetes/pod_web2.yml
# create pod.yml that will be used by the ingress, with ImagePullPolicy never
apiVersion: v1
kind: Pod

metadata:
  name: pod-tp3-web2
  labels:
    app: pod-tp3-web2

spec:
  containers:

  - name: container-tp3-web2
    image: tp3-web2
    imagePullPolicy: Never
    ports:
    - containerPort: 80
