kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tp3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
  - host: tp3.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tp3-web1
            port:
              number: 80
      - path: /prof2math
        pathType: Prefix
        backend:
          service:
            name: tp3-web2
            port:
              number: 80
